# DeviceEmulator

./: .gitignore  PROGRESS.md  README.md  start_all.ps1  stop_all.ps1
docs/: FERTIGSTELLUNGSBERICHT.md  README_Projektdokumentation.md
docs/01_Projektinitiierung/: PIB_Projektauftrag.md  Stakeholder_Analyse.md
docs/02_Projektplanung/: Projektplan_Meilensteine.md  Projektplan_Zeitplan.md  Risikoanalyse.md
docs/03_Systemarchitektur/: Architektur_Übersicht.md  System_Architektur.md  Technische_Spezifikation.md
docs/04_Anforderungen/: Funktionale_Anforderungen.md  Nichtfunktionale_Anforderungen.md
docs/05_Entwicklung/: Build_Deployment.md
docs/06_Qualitätssicherung/: Code_Qualitätsstandards.md  Test_Strategie.md
docs/07_Operations_Monitoring/: Deployment_Operations.md  Monitoring_Observability.md
docs/08_Projektkontrolle_Governance/: Change_Management_Governance.md  Projektabschluss_Lessons_Learned.md  Projektcontrolling_Berichtswesen.md
docs/09_Anhaenge_Referenzen/: Templates_Checklisten_Referenzen.md
iot-emulator/: CMakeLists.txt  PROGRESS.md  README.md
iot-emulator/bridges/: README.md  opcua2mqtt.py
iot-emulator/cli/: CMakeLists.txt  main.cpp
iot-emulator/config/: devices.yaml  opcua_nodes.yaml  scenarios.yaml
iot-emulator/core/: CMakeLists.txt  config_loader.cpp  device_base.cpp  device_base.hpp  device_runner.hpp  httplib.h  protocol_client.hpp  rest_server.cpp  simulation_engine.cpp  simulation_engine.hpp
iot-emulator/devices/: CMakeLists.txt  cnc_machine.cpp  pressure_valve.cpp  temperature_sensor.cpp
iot-emulator/monitor/: api.py  app.py  backend_bridge.py
iot-emulator/monitor/templates/: index.html
iot-emulator/protocols/can/: can_client.cpp  can_client.hpp
iot-emulator/protocols/coap/: coap_client.cpp  coap_client.hpp
iot-emulator/protocols/http/: http_client.cpp  http_client.hpp
iot-emulator/protocols/modbus/: modbus_client.cpp  modbus_client.hpp
iot-emulator/protocols/mqtt/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.hpp  mqtt_device.cpp  mqtt_protocol_client.cpp  mqtt_protocol_client.hpp
iot-emulator/protocols/opcua/: CMakeLists.txt  opcua_device.cpp  opcua_server.hpp
iot-emulator/protocols/rest/: CMakeLists.txt  rest_device.cpp  rest_server.hpp
iot-emulator/tests/: CMakeLists.txt  doctest.h  test_temperature_sensor.cpp
xdocs/: emulator_plan.md  yaml-cpp-troubleshooting.md
